# Turtlewatch

./: .env_example  .gitignore  .gitmodules  README.md  docker-compose.yaml  flake.nix  pyrightconfig.json
turtlewatch/: .env_example  README.md  pyproject.toml
turtlewatch/bridge/: __init__.py  alert.py  database_client.py  main.py  mock.py  plugin_loader.py  publishers.py  stats.py  test_utils.py  throttled_subscriber.py  types.py  utils.py
turtlewatch/bridge/plugins/custom_plugins/: display_controls.py  emergency_stop.py  example.py  move_status.py  nav_status.py  signal_status.py  speech.py  speech_command.py  speech_status.py
turtlewatch/bridge/plugins/default_plugins/: Odometry.py  battery.py  cmd_vel.py
turtlewatch/libs/custom_msgs/speech_out/: SpeechOutput.msg
turtlewatch/ros_msgs/actionlib_msgs/msg/: _GoalStatus.py  _GoalStatusArray.py
turtlewatch/ros_msgs/custom_msgs/: __init__.py
turtlewatch/ros_msgs/custom_msgs/msg/: _SignalState.py  _SignalStatusUpdate.py  _SpeechCommand.py  _SpeechStatus.py  __init__.py
turtlewatch/ros_msgs/custom_msgs/speech_out/: __init__.py
turtlewatch/ros_msgs/diagnostic_msgs/msg/: _DiagnosticArray.py  _DiagnosticStatus.py
turtlewatch/ros_msgs/diagnostic_msgs/srv/: _SelfTest.py
turtlewatch/ros_msgs/geometry_msgs/msg/: _Accel.py  _AccelStamped.py  _AccelWithCovariance.py  _AccelWithCovarianceStamped.py  _Inertia.py  _InertiaStamped.py  _PointStamped.py  _Polygon.py  _PolygonStamped.py  _Pose.py  _PoseArray.py  _PoseStamped.py  _PoseWithCovariance.py  _PoseWithCovarianceStamped.py  _QuaternionStamped.py  _Transform.py  _Twist.py  (+7 more)
turtlewatch/scripts/: generate_messages.py
turtlewatch/src/: main.py
(+111 files in other folders)
