[project]
name = "turtlewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "influxdb3-python>=0.16.0",
    "netifaces>=0.11.0",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "rospkg>=1.6.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
]

[tool.pytest.ini_options]
testpaths = ["bridge"]
norecursedirs = ["libs", ".venv", ".git"]

[tool.uv.extra-build-dependencies]
file = ["catkin_pkg"]
