[project]
name = "turtlewatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.11.12",
    "influxdb3-python>=0.16.0",
    "netifaces>=0.11.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rospkg>=1.6.0",
    "slack-sdk>=3.39.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
]

[tool.pytest.ini_options]
testpaths = ["bridge"]
norecursedirs = ["libs", ".venv", ".git"]

[tool.uv.extra-build-dependencies]
file = ["catkin_pkg"]

[tool.ruff]
# Add "migrations" and "my_custom_folder" to the default ignore list
extend-exclude = ["libs", "ros_msgs"]
